[project]
name = "bt"
version = "1.2.0"
description = "A flexible backtesting framework for Python"
authors = [
    {name = "Philippe Morissette", email = "morissette.philippe@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
keywords = ["python", "finance", "quant", "backtesting", "strategies", "algotrading", "algorithmic", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cython>=3.2.1",
    "ffn>=1.1.2",
    "pyprind>=2.11.3",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/pmorissette/bt"

[build-system]
requires = ["hatchling", "cython>=3.2.1"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bt"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/bt",
    "/tests",
    "/LICENSE",
    "/README.md",
]
exclude = [
    "*.pyc",
    "*.pyo",
    "*~",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".DS_Store",
]

[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "RUF", "PERF", "TC", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["bt"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "-q", "--strict-markers", "--import-mode=importlib"]
testpaths = ["tests"]
pythonpath = ["src"]
xfail_strict = true
filterwarnings = ["error"]
